@startuml INVERSA_ERD
!theme plain
skinparam backgroundColor #FEFEFE
skinparam entityBackgroundColor #F0F0F0
skinparam entityBorderColor #333333
skinparam arrowColor #333333

' ============ CORE ENTITIES ============

entity "users" as users {
  *id : int <<PK>>
  --
  name : varchar(255)
  email : varchar(255) <<UNIQUE>>
  password_hash : varchar(255)
  role : varchar(50)
  profile_image : text
  bio : text
  created_at : timestamp
  updated_at : timestamp
  deleted_at : timestamp
}

entity "categories" as categories {
  *id : int <<PK>>
  --
  name : varchar(100) <<UNIQUE>>
  description : text
  color : varchar(7)
  created_at : timestamp
}

entity "genres" as genres {
  *id : int <<PK>>
  --
  name : varchar(100) <<UNIQUE>>
  description : text
  color : varchar(7)
  created_at : timestamp
}

entity "projects" as projects {
  *id : int <<PK>>
  --
  title : varchar(255)
  description : text
  initiator_id : int <<FK>>
  category_id : int <<FK>>
  genre_id : int <<FK>>
  background_image : text
  is_team_project : boolean
  team_id : int <<FK>>
  status : varchar(50)
  views : int
  likes : int
  has_published_chapters : boolean
  created_at : timestamp
  updated_at : timestamp
  deleted_at : timestamp
}

entity "chapters" as chapters {
  *id : int <<PK>>
  --
  project_id : int <<FK>>
  chapter_number : int
  title : varchar(255)
  description : text
  content : text
  status : varchar(50)
  created_by : int <<FK>>
  created_at : timestamp
  updated_at : timestamp
  deleted_at : timestamp
}

entity "sections" as sections {
  *id : int <<PK>>
  --
  chapter_id : int <<FK>>
  section_number : int
  title : varchar(255)
  content : text
  created_at : timestamp
  updated_at : timestamp
}

entity "teams" as teams {
  *id : int <<PK>>
  --
  title : varchar(255)
  description : text
  initiator_id : int <<FK>>
  background_image : text
  created_at : timestamp
  updated_at : timestamp
  deleted_at : timestamp
}

entity "team_collaborators" as team_collaborators {
  *id : int <<PK>>
  --
  team_id : int <<FK>>
  user_id : int <<FK>>
  role : varchar(50)
  status : varchar(50)
  joined_at : timestamp
}

entity "project_collaborators" as project_collaborators {
  *id : int <<PK>>
  --
  project_id : int <<FK>>
  user_id : int <<FK>>
  role : varchar(50)
  status : varchar(50)
  requested_at : timestamp
  approved_at : timestamp
}

' ============ BRAINSTORM ENTITIES ============

entity "brainstorm" as brainstorm {
  *id : int <<PK>>
  --
  project_id : int <<FK>> <<UNIQUE>>
  created_at : timestamp
  updated_at : timestamp
}

entity "ideas" as ideas {
  *id : int <<PK>>
  --
  brainstorm_id : int <<FK>>
  user_id : int <<FK>>
  user_name : varchar(255)
  content : text
  chapter_reference : int <<FK>>
  votes : int
  created_at : timestamp
  updated_at : timestamp
}

entity "comments" as comments {
  *id : int <<PK>>
  --
  idea_id : int <<FK>>
  user_id : int <<FK>>
  user_name : varchar(255)
  content : text
  created_at : timestamp
  updated_at : timestamp
}

entity "tasks" as tasks {
  *id : int <<PK>>
  --
  brainstorm_id : int <<FK>>
  title : varchar(255)
  description : text
  status : varchar(50)
  chapter_reference : int <<FK>>
  section_reference : int <<FK>>
  assigned_to : int <<FK>>
  created_by : int <<FK>>
  created_at : timestamp
  updated_at : timestamp
}

entity "discussions" as discussions {
  *id : int <<PK>>
  --
  brainstorm_id : int <<FK>>
  user_id : int <<FK>>
  user_name : varchar(255)
  content : text
  created_at : timestamp
  updated_at : timestamp
}

entity "notes" as notes {
  *id : int <<PK>>
  --
  brainstorm_id : int <<FK>>
  user_id : int <<FK>>
  user_name : varchar(255)
  content : text
  created_at : timestamp
  updated_at : timestamp
}

entity "contributions" as contributions {
  *id : int <<PK>>
  --
  brainstorm_id : int <<FK>>
  user_id : int <<FK>>
  contribution_type : varchar(50)
  count : int
  created_at : timestamp
  updated_at : timestamp
}

' ============ MODERATION ============

entity "reports" as reports {
  *id : int <<PK>>
  --
  project_id : int <<FK>>
  reported_by : int <<FK>>
  reason : varchar(255)
  note : text
  status : varchar(50)
  created_at : timestamp
  updated_at : timestamp
}

' ============ RELATIONSHIPS ============

users ||--o{ projects : "creates"
users ||--o{ teams : "creates"
users ||--o{ chapters : "writes"
users ||--o{ ideas : "contributes"
users ||--o{ comments : "writes"
users ||--o{ tasks : "creates/assigned"
users ||--o{ discussions : "participates"
users ||--o{ notes : "writes"
users ||--o{ reports : "reports"
users ||--o{ team_collaborators : "joins"
users ||--o{ project_collaborators : "joins"

categories ||--o{ projects : "categorizes"
genres ||--o{ projects : "classifies"

projects ||--o{ chapters : "contains"
projects ||--|| brainstorm : "has"
projects ||--o{ project_collaborators : "has"
projects }o--|| teams : "belongs_to"

chapters ||--o{ sections : "contains"
chapters ||--o{ ideas : "referenced_by"

teams ||--o{ team_collaborators : "has"
teams ||--o{ projects : "creates"

brainstorm ||--o{ ideas : "contains"
brainstorm ||--o{ tasks : "contains"
brainstorm ||--o{ discussions : "contains"
brainstorm ||--o{ notes : "contains"
brainstorm ||--o{ contributions : "tracks"

ideas ||--o{ comments : "has"

tasks }o--|| chapters : "references"
tasks }o--|| sections : "references"

reports }o--|| projects : "reports"

note right of users
  Core user entity
  Stores authentication and profile
  Soft delete support
end note

note right of projects
  Main project entity
  Can be solo or team-based
  Tracks views and likes
  has_published_chapters flag for filtering
end note

note right of chapters
  Chapters within projects
  Unique chapter_number per project
  Can be draft or published
end note

note right of teams
  Team collaboration entity
  Team initiator is owner
  Team members via team_collaborators
end note

note right of brainstorm
  One brainstorm per project
  Central hub for collaboration
  Contains ideas, tasks, discussions, notes
end note

note right of ideas
  Brainstorm ideas
  Can reference specific chapters
  Support voting and comments
end note

note right of tasks
  Task management within brainstorm
  Can be assigned to team members
  References chapters and sections
end note

note right of contributions
  Tracks user contributions
  Used for activity metrics
  Supports different contribution types
end note

@enduml
